Revert "fixed - horizontal scrolling body content"
This reverts commit c8a53669dbcc1221e81d408da35418e437a91f0f.

--- a/styles/desktop/mail.less
+++ b/styles/desktop/mail.less
@@ -275,8 +275,7 @@
 	.message_body {
 		font-size: 11pt;
 		padding: 20px;
-		min-width: fit-content;
-
+		
 		li {
 			margin-bottom: 0.6em;
 		}
